# Blindfold-Chess-Trainer

./: .gitignore  pyproject.toml  requirements.txt
blindfold_chess/: position.py
tests/: test_position.py
