[project]
name = "blindfold-chess-trainer"
version = "0.1.0"
description = "A terminal user interface for blindfold chess"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "pytest>=8.4.0",
    "setuptools>=80.9.0",
    "textual>=3.3.0",
    "wheel>=0.45.1",
]

[project.scripts]
blindfold = "blindfold_chess.app:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
